# sample_project

./: .gitignore  README.md  Revenue Alert < 5.dbalert.json  databricks.yml  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: job_notebook.py
src/: __init__.py  main.py
